--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="col-md">Pellentesque et diam eleifend, condimentum metus vel, aliquam nibh. Morbi consectetur eros sit amet metus tincidunt, sit amet fermentum tortor varius. Fusce tempor felis nibh, a dictum dui ultricies vitae. </div>
           <div class="col-md">Quisque nec lectus metus. Donec tempor libero bibendum, dictum ligula sed, cursus nisl. Maecenas sit amet gravida est, sit amet posuere dui. Aliquam erat volutpat.
             <!--Task 14-->
-            <img src="/images/_MG_3455.jpg" class="img-fluid">
+            <img src="_MG_3455.jpg" class="img-fluid">
             </div>
     </div>
   </div>
@@ -92,7 +92,7 @@
 
 
 <!--Task 12 through 15-->
-<img src="/images/ROGER DOESNT KNOW HE'S HORRIBLE_FRONT copy.jpg" class="img-fluid">
+<img src="ROGER DOESNT KNOW HE'S HORRIBLE_FRONT copy.jpg" class="img-fluid">
   
     <!-- Optional JavaScript; choose one of the two! -->
 
